# bt_api_coinspot

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_coinspot/: __init__.py  plugin.py  registry_registration.py
src/bt_api_coinspot/containers/: __init__.py
src/bt_api_coinspot/containers/accounts/: __init__.py
src/bt_api_coinspot/containers/balances/: __init__.py
src/bt_api_coinspot/containers/bars/: __init__.py
src/bt_api_coinspot/containers/orderbooks/: __init__.py
src/bt_api_coinspot/containers/orders/: __init__.py
src/bt_api_coinspot/containers/tickers/: __init__.py  coinspot_ticker.py
src/bt_api_coinspot/errors/: __init__.py
src/bt_api_coinspot/exchange_data/: __init__.py
src/bt_api_coinspot/feeds/: __init__.py
src/bt_api_coinspot/feeds/live_coinspot/: __init__.py  request_base.py  spot.py
src/bt_api_coinspot/tickers/: __init__.py
tests/: test_coinspot_ticker.py
tests/containers/exchanges/: test_coinspot_exchange_data.py
tests/containers/tickers/: test_coinspot_ticker.py
tests/feeds/: test_coinspot_request_base_extra.py
