[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bt_api_coinspot"
version = "0.1.0"
description = "CoinSpot exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["bt_api_base"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_coinspot"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "I",
  "UP",
  "F",
  "E",
  "W",
  "TC",
  "SIM",
]
ignore = [
  "TC002",
  "TC004",
  "SIM102",
  "SIM108",
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["bt_api_coinspot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
